<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">好加油</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_near_by_fragment">NearByFragment</string>
    <string name="title_activity_message_fragment">MessageFragment</string>
    <string name="title_activity_hh">HH</string>
    <string name="title_activity_ww">WW</string>
    <string name="title_activity_iin">IIn</string>
    <string name="title_activity_pp">PP</string>
    <string name="title_activity_bbfragment">BBFragment</string>
    <string name="title_activity_mine_fragment">MineFragment</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_cycle_view_pager">CycleViewPager</string>
    <string name="title_activity_cycle_view_pager_handler">CycleViewPagerHandler</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_my_car">MyCar</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_car_info">CarInfo</string>
    <string name="title_activity_mycar_info">MycarInfo</string>
    <string name="title_activity_mycar">MycarActivity</string>
    <string name="title_activity_peccancyquery">PeccancyqueryActivity</string>
    <string name="title_activity_query_mycar_fragment">QueryMycarFragment</string>
    <string name="title_activity_query_others_fragment">QueryOthersFragment</string>
    <string name="title_activity_station">StationActivity</string>
    <string name="title_activity_station_detail">StationDetailActivity</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="csy_form_tip">目前仅支持小型汽车查询</string>
    <string name="csy_btn_query">开始查询</string>
    <string name="csy_cxdz_lab">查询地</string>
    <string name="csy_cxdz_tip">请选择查询地</string>
    <string name="csy_chepai_lab">车牌号</string>
    <string name="csy_chepai_tip">请输入车牌号后6位</string>
    <string name="csy_chejia_lab">车架号</string>
    <string name="csy_engine_lab">发动机号</string>
    <string name="csy_close">关闭</string>
    <string name="hello">个推开放平台Sdk演示程序</string>
    <string name="up">绑定sdk</string>
    <string name="down">解绑sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="unbind_alias">解除别名绑定</string>
    <string name="title_activity_select_place">SelectPlace</string>
    <string name="title_activity_mycar_weizhang_resulet">MycarWeizhangResulet</string>
    <string name="title_activity_car_detailed_info">CarDetailedInfo</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="title_activity_suggestion_search">SuggestionSearch</string>
    <string name="title_activity_car_user_register">好加油</string>
    <string name="title_activity_car_user_login2">好加油</string>
    <string name="title_activity_order_detail">OrderDetail</string>
    <string name="title_activity_order_list">OrderList</string>
    <string name="title_activity_car_user_reset_password">好加油</string> 
    
    
    <string-array name="player_mode">
        <item>顺序播放</item>
        <item>随机播放</item>
        <item>单曲循环</item>
        <item>列表循环</item>
    </string-array>
    <string-array name="list_tab_items">
        <item >本地音乐</item>
        <item >网络音乐</item>
        <item >下载管理</item>
    </string-array>
    
    <string name="scan_title">扫描歌曲</string>
    <string name="btn_scan_ok">扫描歌曲</string>
    <string name="btn_scan_add">添加目录</string>
    
    <string name="scan_directory_title">添加扫描目录</string>
    <string name="btn_scan_directory_goup"> ↑ 返回上一级</string>
    <string name="btn_san_directory_add">添加</string>
    <string name="btn_san_directory_back">返回</string>
    
    <string name="btn_list_random_music">随机播放</string>    
 
    <string name="appwidget_labelname">好加油音乐</string>
    
    <string name="title_activity_my_information">MyInformation</string>
    <string name="title_activity_ensure_pay">EnsurePay</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_order_again">OrderAgain</string>

</resources>
